Squash bug where it would start fetching materials when not signed in

--- a/client/src/scss/partials/_classes.scss
+++ b/client/src/scss/partials/_classes.scss
@@ -1,5 +1,9 @@
 @import '../mixins/content-box';
 
+.spinner-border {
+    flex-shrink: 0;
+}
+
 .classes-error-burrito {
     width: 100%;
     height: 90vh;
